Fixed readability issue
Resolved a readability issue where certain images lacked contrast with card title by reducing brightness from .85 to .5

--- a/Swipe/style.css
+++ b/Swipe/style.css
@@ -126,7 +126,7 @@ h2 {
     width: 20rem;
     min-width: 100%;
     min-height: 100%;  
-    filter: blur(2px) brightness(.85);
+    filter: blur(2px) brightness(.5);
 }
 
 .icon-img {
